[workspace]
members = ["."]

[package]
name = "pg_url"
version = "0.1.0"
description = "A postgres extension for working with URLs"
edition = "2021"
license = "MIT"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/pg_url/"
categories = ["database", "database-implementations"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = []

[dependencies]
pgx = { version = "=0.6.1" }
url = "2.3.1"

[dev-dependencies]
pgx-tests = "=0.6.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
